Add hiddent meta tag to test the deploy script

--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -40,4 +40,5 @@
       <%- contactLinks.join(''); %>
     </div>
   </div>
+  <meta name="generator" content="https://github.com/briananders/briananders.com">
 </footer>
