Add a build time meta tag

--- a/src/partials/head/meta.ejs
+++ b/src/partials/head/meta.ejs
@@ -54,6 +54,7 @@
 <meta itemprop="isFamilyFriendly"                  content="true"/>
 
 <meta name="build-id" content="<%- locals.commitHash %>" />
+<meta name="build-datetime" content="<%- new Date().toISOString() %>" />
 
 <meta itemprop="author"                            content="<%- locals.author %>"/>
 <% if (locals.date) { %>
