--- a/src/styles/example/_phone-shared.scss
+++ b/src/styles/example/_phone-shared.scss
@@ -25,7 +25,7 @@ name {
   width: 80%;
   margin-left: 10%;
   text-overflow: ellipsis;
-  text-align: center;
+  text-align: left;
   white-space: nowrap;
   overflow: hidden;
 }
