--- a/src/styles/example/flex-iphone.scss
+++ b/src/styles/example/flex-iphone.scss
@@ -41,7 +41,7 @@ close {
   border-radius: 100%;
   background-color: grey;
   color: black;
-  text-align: center;
+  text-align: left;
   line-height: 3.4vw;
   font-size: 5vw;
   cursor: pointer;
