--- a/src/styles/modules/_skip-nav.scss
+++ b/src/styles/modules/_skip-nav.scss
@@ -5,10 +5,10 @@
   transform: translateX(-50%);
   width: auto;
   z-index: 10000000;
-  padding: $s2;
+  padding: space(2);
   margin: auto;
-  border-bottom-left-radius: $border-radius;
-  border-bottom-right-radius: $border-radius;
+  border-bottom-left-radius: var(--border-radius, $border-radius);
+  border-bottom-right-radius: var(--border-radius, $border-radius);
   box-shadow: 0 0 12px black;
 
   &[data-state=inactive] {
