--- a/src/styles/modules/code/_code-container.scss
+++ b/src/styles/modules/code/_code-container.scss
@@ -1,12 +1,12 @@
 .code-container {
   @include type--body-small;
-  @include sixHundred;
-  margin: auto auto $s6;
-  margin-bottom: $s6;
+  @include readingWidth;
+  margin: auto auto space(6);
+  margin-bottom: space(6);
   max-width: 100%;
   overflow: hidden;
   position: relative;
-  text-align: center;
+  text-align: left;
   display: flex;
   border: 2px solid $palette--secondary-grey;
 
@@ -16,7 +16,7 @@
     position: absolute;
     top: 0px;
     bottom: 0px;
-    width: $s6;
+    width: space(6);
   }
 
   &::before {
