--- a/src/styles/modules/header.scss
+++ b/src/styles/modules/header.scss
@@ -5,7 +5,7 @@
 
 header.main-header {
   @include palette--base;
-  margin-top: $s6;
+  margin-top: space(6);
   @include margin-center;
 
   h1.name {
