--- a/src/styles/posts/last-fm-scrobbles.scss
+++ b/src/styles/posts/last-fm-scrobbles.scss
@@ -19,18 +19,18 @@ p {
 }
 
 .year-selector-container {
-  @include sixHundred;
+  @include readingWidth;
   @include paragraph-margin;
 }
 
 #albums, #artists, #yearly-scrobbles {
-  @include sixHundred;
+  @include readingWidth;
 
   display: grid;
-  gap: $s2;
+  gap: space(2);
 }
 
 #albums, #artists {
-  gap: $s6;
-  margin-bottom: $s12;
+  gap: space(6);
+  margin-bottom: space(12);
 }
