--- a/src/styles/posts/polar-clock.scss
+++ b/src/styles/posts/polar-clock.scss
@@ -3,7 +3,7 @@
 .key {
   display: grid;
   row-gap: 3px;
-  @include sixHundred;
+  @include readingWidth;
   margin-bottom: $paragraph-bottom;
 
   > div {
