--- a/src/styles/posts/quality-podcasts.scss
+++ b/src/styles/posts/quality-podcasts.scss
@@ -2,9 +2,8 @@
 
 
 .podcast-cover {
-  max-width: 410px;
-  margin: auto;
+  max-width: 200px;
   display: block;
-  margin-bottom: $s6;
+  margin-bottom: space(6);
   width: 100%;
 }
