--- a/src/styles/posts/reverse-hover-state.scss
+++ b/src/styles/posts/reverse-hover-state.scss
@@ -14,7 +14,7 @@
     width: 100px;
     height: 100px;
     background-color: $palette--primary-color-dark;
-    margin: $s2;
+    margin: space(2);
     pointer-events: all;
 
     opacity: 1;
