--- a/src/styles/system/classes/_elements.scss
+++ b/src/styles/system/classes/_elements.scss
@@ -30,7 +30,7 @@
 
 .error {
   color: $color--red-500;
-  text-align: center;
+  text-align: left;
 }
 
 .block {
@@ -38,7 +38,7 @@
 }
 
 .center {
-  text-align: center;
+  text-align: left;
   justify-content: center;
 }
 
@@ -47,7 +47,7 @@
 }
 
 .center {
-  text-align: center;
+  text-align: left;
   justify-content: center;
 }
 
