--- a/src/styles/modules/_nav.scss
+++ b/src/styles/modules/_nav.scss
@@ -1,6 +1,6 @@
 @import "modules/sticky-stacky";
 
-$nav-height: $s12;
+$nav-height: space(12);
 
 html {
   --nav-height: #{$nav-height};
@@ -81,25 +81,25 @@ nav.main {
     z-index: 0;
     position: absolute;
     top: calc(100% + 12px);
-    transform-origin: calc(100% - #{$s2 + 20px}) -$s2;
+    transform-origin: calc(100% - #{space(2) + 20px}) -#{space(2)};
     transform: rotateY(90deg);
     display: grid;
-    right: $s2;
+    right: space(2);
     transition-property: transform;
     @include palette--base;
     box-shadow: 0 0 0 2px $palette--primary-color-light;
-    padding: $s1;
+    padding: space(1);
 
     &.slide-in {
       transform: rotateY(0deg);
     }
 
     @include mq($medium) {
-      right: $s6;
+      right: space(6);
     }
 
     .block-link {
-      padding: 2px $s1 0;
+      padding: 2px space(1) 0;
       margin-left: 0;
     }
   }
@@ -108,10 +108,10 @@ nav.main {
     &,
     &::after {
       position: absolute;
-      width: $s4;
-      height: $s4;
+      width: space(4);
+      height: space(4);
       border-style: solid;
-      border-width: $s2;
+      border-width: space(2);
       border-radius: 0;
       border-top-color: transparent;
       border-left-color: transparent;
@@ -126,7 +126,7 @@ nav.main {
       transform: translateY(2px);
     }
 
-    top: -$s4;
+    top: -#{space(4)};
     right: 20px;
     border-bottom-color: $palette--primary-color-light;
   }
