--- a/src/styles/modules/code/_code-element.scss
+++ b/src/styles/modules/code/_code-element.scss
@@ -2,7 +2,7 @@ code {
   white-space: pre;
   overflow: hidden;
   font-family: monospace, serif;
-  padding: $s6;
+  padding: space(6);
   display: inline-block;
   overflow-x: auto;
   max-width: 100%;
