--- a/src/styles/posts/unique-stars.scss
+++ b/src/styles/posts/unique-stars.scss
@@ -2,9 +2,9 @@
 
 answer, answer-array {
   display: block;
-  text-align: center;
-  margin-top: $s6;
-  margin-bottom: $s6;
+  text-align: left;
+  margin-top: space(6);
+  margin-bottom: space(6);
 }
 
 answer-array {
@@ -37,7 +37,7 @@ form {
   flex-wrap: wrap;
 
   > * {
-    padding: 0 $s1;
+    padding: 0 space(1);
   }
 
   span,
