--- a/src/styles/posts/wordle-solver-2.scss
+++ b/src/styles/posts/wordle-solver-2.scss
@@ -30,7 +30,7 @@
 
 .board {
   overflow: hidden;
-  padding: 0 $s1;
+  padding: 0 space(1);
   transition-property: height;
 }
 
@@ -48,8 +48,8 @@
   span {
     position: relative;
     display: inline-block;
-    padding: #{$s1 / 2} $s1;
-    margin: $s1;
+    padding: #{space(1) / 2} space(1);
+    margin: space(1);
     border: 2px solid $palette--divider-color;
     cursor: pointer;
 
@@ -85,7 +85,7 @@
   grid-template-columns: repeat(5, 60px);
   justify-content: center;
   align-items: center;
-  padding: $s2 0;
+  padding: space(2) 0;
 
   @include mq-max(375px) {
     grid-template-columns: repeat(5, 58px);
@@ -102,14 +102,14 @@
 }
 
 .game-board {
-  text-align: center;
+  text-align: left;
 }
 
 fieldset {
   label {
     display: block;
     padding: 0;
-    height: $s4;
+    height: space(4);
     position: relative;
     margin-bottom: 0;
 
@@ -151,10 +151,10 @@ fieldset {
 
 input.letter {
   @include type--heading-1;
-  text-align: center;
-  width: $s10;
-  height: $s10;
-  line-height: $s10;
+  text-align: left;
+  width: space(10);
+  height: space(10);
+  line-height: space(10);
   min-width: 0;
   padding: 0;
   margin-bottom: 0;
@@ -189,7 +189,7 @@ toast-notification {
     display: inline-block;
     background: $palette--accent-color;
     color: $palette--primary-grey;
-    padding: $s2 $s4;
-    margin-bottom: $s2;
+    padding: space(2) space(4);
+    margin-bottom: space(2);
   }
 }
