--- a/src/styles/system/mixins/_elements.scss
+++ b/src/styles/system/mixins/_elements.scss
@@ -51,8 +51,8 @@
   mixin: checkbox;
 
   cursor: pointer;
-  height: $s4;
-  width: $s4;
+  height: space(4);
+  width: space(4);
   margin: unset;
 
   @include link-focus;
@@ -63,9 +63,9 @@
 
   @include type--body;
   @include palette--base;
-  border-radius: $border-radius;
-  height: $s6 + $s1 / 2;
-  padding: $s1/3 $s1 0;
+  border-radius: var(--border-radius, $border-radius);
+  height: space(6) + space(1) / 2;
+  padding: space(1)/3 space(1) 0;
   border: 1px solid $palette--divider-color;
 }
 
@@ -75,17 +75,17 @@
   @include type--body;
   @include palette--base;
 
-  min-width: $s12;
-  border-radius: $border-radius;
-  height: $s6 + $s1 / 2;
-  padding: 0 $s1;
+  min-width: space(12);
+  border-radius: var(--border-radius, $border-radius);
+  height: space(6) + space(1) / 2;
+  padding: 0 space(1);
   border: 1px solid $palette--secondary-grey;
 }
 
 @mixin input-range {
   mixin: input-range;
 
-  height: $s6 + $s1 / 2;
+  height: space(6) + space(1) / 2;
   cursor: pointer;
 
   @include link-focus;
@@ -98,9 +98,9 @@
   @include palette--base;
 
   appearance: menulist;
-  border-radius: $border-radius;
-  height: $s6 + $s1 / 2;
-  padding: 0 $s1;
+  border-radius: var(--border-radius, $border-radius);
+  height: space(6) + space(1) / 2;
+  padding: 0 space(1);
   border: 1px solid $palette--secondary-grey;
   cursor: pointer;
 
@@ -157,8 +157,9 @@
 
   @include link-base;
 
-  padding: 2px $s1 0;
-  margin-left: -$s1;
+  padding: 2px space(1) 0;
+  margin-left: -#{space(1)};
+  box-sizing: content-box;
   display: inline-flex;
   color: $palette--primary-white;
 
@@ -188,9 +189,9 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  padding: $s2 $s6;
-  margin: $s2;
-  border-radius: $border-radius;
+  padding: space(2) space(6);
+  margin: space(2);
+  border-radius: var(--border-radius, $border-radius);
 
   color: $palette--primary-white;
   border: 2px solid $palette--divider-color;
@@ -205,11 +206,14 @@
   @include link-base;
 
   display: grid;
-  border-radius: $border-radius;
+  border-radius: var(--border-radius, $border-radius);
 
   color: $palette--primary-white;
-  box-shadow: 0px 10px 90px 0px #111;
-  padding: $s2;
+  padding: space(2);
+  margin-left: -#{space(2)};
+  margin-right: -#{space(2)};
+  box-sizing: content-box;
+  width: 100%;
 
   @include link-hover;
   @include link-focus;
@@ -227,10 +231,10 @@
 
   @include content-width;
   position: relative;
-  padding: 0 $s2;
+  padding: 0 space(2);
 
   @include mq($medium) {
-    padding: 0 $s6;
+    padding: 0 space(6);
   }
 }
 
@@ -238,7 +242,7 @@
   mixin: paragraph;
 
   width: 100%;
-  @include sixHundred;
+  @include readingWidth;
   margin-bottom: $paragraph-bottom;
   @include type--body;
 
@@ -270,10 +274,9 @@
 @mixin quotation {
   mixin: quotation;
 
-  @include margin-center;
   @include paragraph-margin;
 
-  padding: $s4 $s4;
+  padding: space(4) space(4);
   overflow: hidden;
   max-width: 500px;
   background-color: transparent;
@@ -296,7 +299,7 @@
   mixin: label;
 
   @include type--heading-6;
-  padding: 0 $s3;
+  padding: 0 space(3);
   @include type--regular-sans-serif;
 }
 
@@ -309,7 +312,7 @@
 @mixin list-item {
   mixin: list-item;
 
-  margin-bottom: $s3;
+  margin-bottom: space(3);
   &:last-of-type {
     margin-bottom: 0;
   }
@@ -318,5 +321,5 @@
 @mixin mega-button {
   mixin: mega-button;
 
-  padding: $s2 $s4;
+  padding: space(2) space(4);
 }
