--- a/src/styles/system/mixins/_grid.scss
+++ b/src/styles/system/mixins/_grid.scss
@@ -9,13 +9,12 @@
   margin-right: auto;
 }
 
-@mixin sixHundred {
-  @include margin-center;
+@mixin readingWidth {
   width: css-min($grid--copy-max-width, 100%);
 }
 
 @mixin text-center {
-  text-align: center;
+  text-align: left;
 }
 
 @mixin text-left {
