--- a/src/styles/system/mixins/_type.scss
+++ b/src/styles/system/mixins/_type.scss
@@ -66,7 +66,7 @@
 
   @include type--bold-sans-serif;
 
-  text-align: center;
+  text-align: left;
   text-shadow: 0px 2px 4px black;
 }
 
@@ -76,7 +76,7 @@
   @include type--headings;
 
   @include font-size(9);
-  margin-bottom: $s6;
+  margin-bottom: space(6);
 }
 
 @mixin type--heading-1 {
@@ -85,7 +85,7 @@
   @include type--headings;
 
   @include font-size(8);
-  margin-bottom: $s6;
+  margin-bottom: space(6);
 }
 
 @mixin type--heading-2 {
@@ -94,7 +94,7 @@
   @include type--headings;
 
   @include font-size(7);
-  margin-bottom: $s6;
+  margin-bottom: space(6);
 }
 
 @mixin type--heading-3 {
@@ -103,7 +103,7 @@
   @include type--headings;
 
   @include font-size(6);
-  margin-bottom: $s4;
+  margin-bottom: space(4);
 }
 
 @mixin type--heading-4 {
@@ -112,7 +112,7 @@
   @include type--headings;
 
   @include font-size(5);
-  margin-bottom: $s3;
+  margin-bottom: space(3);
 }
 
 @mixin type--heading-5 {
@@ -121,7 +121,7 @@
   @include type--headings;
 
   @include font-size(4);
-  margin-bottom: $s3;
+  margin-bottom: space(3);
 }
 
 @mixin type--heading-6 {
@@ -130,7 +130,7 @@
   @include type--headings;
 
   @include font-size(3);
-  margin-bottom: $s3;
+  margin-bottom: space(3);
 }
 
 @mixin type--body {
