--- a/src/templates/posts/last-fm-scrobbles.ejs
+++ b/src/templates/posts/last-fm-scrobbles.ejs
@@ -13,12 +13,14 @@ scripts:
   - 'posts/last-fm-scrobbles'
 ---
 
-<blockquote>
-  <p>To 'scrobble' a song means that when you listen to it, the name of the song is sent to a Web site (for example, Last.fm) and added to your music profile. Here’s how it works: Once you've signed up and downloaded Last.fm, you can scrobble songs you listen to on your computer or iPod automatically.</p>
-  <cite>
-    <%- blockLink('Netlingo.com', { href: "https://www.netlingo.com/word/scrobble.php" })%>
-  </cite>
-</blockquote>
+<div class="container">
+  <blockquote>
+    <p>To 'scrobble' a song means that when you listen to it, the name of the song is sent to a Web site (for example, Last.fm) and added to your music profile. Here’s how it works: Once you've signed up and downloaded Last.fm, you can scrobble songs you listen to on your computer or iPod automatically.</p>
+    <cite>
+      <%- blockLink('Netlingo.com', { href: "https://www.netlingo.com/word/scrobble.php" })%>
+    </cite>
+  </blockquote>
+</div>
 
 <div class="container">
   <p>
